# Taskk

./: .astylerc  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt
client/Resources/: icon.rc
client/installer/: .gitignore  Taskk-Profiler.nsi  howto.txt
client/src/: client.qrc  main.cpp
client/src/Handlers/DataHandler/: DataHandler.hpp
client/src/Handlers/EfficiencyChartHandler/: EfficiencyChartHandler.cpp  EfficiencyChartHandler.hpp
client/src/Handlers/HierarchyHandler/: HierarchyHandler.cpp  HierarchyHandler.hpp
client/src/Handlers/OperationsBarData/: OperationsBarData.cpp  OperationsBarData.h
client/src/Handlers/PropertiesHandler/: PropertiesHandler.cpp  PropertiesHandler.hpp
client/src/Handlers/SettingsHandler/: SettingsHandler.cpp  SettingsHandler.hpp
client/src/templates/: delegate.hpp
client/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
client/src/ui/Handlers/CustomQTClasses/: PDataScrollBar.hpp
client/src/ui/Handlers/DataHandler/: DataHandler.hpp
client/src/ui/Handlers/OperationsBarData/: OperationsBarData.cpp  OperationsBarData.h
client/src/ui/Widgets/: ChartsWidget.hpp  ExtendedPropertiesWidget.hpp  HierarchyWidget.hpp  MenuBar.hpp  SettingsWidget.hpp  TimelineWidget.hpp
cmake/: macros.cmake
docs/lib/: C API DoxygenConfig  Cxx API DoxygenConfig
example/: CMakeLists.txt
example/libs/taskk/include/: taskk.h
example/libs/taskk/include/taskk/cxx/data_types/: data_types.hpp
example/libs/taskk/include/taskk/cxx/macros/: utils.hpp
example/src/: main.c
lib/: CMakeLists.txt
lib/cmake/: source_lists.cmake
lib/include/: taskk.h  taskk.hpp
lib/include/taskk/cxx/: include_all.hpp
lib/include/taskk/cxx/macros/: taskk_api.hpp
lib/include/taskk/cxx/templates/: attach_auto_overloads.hpp
lib/src/: taskk.cpp  taskk_cxx_wrapper.cpp
lib/src/data_types/: data_types.hpp
lib/src/globals/: globals.cpp  globals.hpp
lib/src/include/taskk/: taskk.h  taskk.hpp
lib/src/io/: io.cpp  io.hpp
lib/src/json/: json.cpp  json.hpp
lib/src/logic/: logic.cpp  logic.hpp
lib/src/macros/: custom_types.hpp  functions.hpp
lib/src/taskk/: c_api.cpp  cxx_wrapper.cpp
lib/src/taskk/cxx/: data_types.cpp
lib/src/utils/: utils.cpp  utils.hpp
lib/tests/: tests.cmake
lib/tests/api/: macros.hpp
lib/tests/src/: attached_data.no_active_operation.c++  operations.attached_data.no_active_operation.cpp  operations.end_non_existent_operation.cpp  utils.find_latest_ongoing_operation.cpp  utils.find_non_existent_operation.cpp  utils.find_outdated_operation.cpp
taskk_client/: CMakeLists.txt
taskk_client/src/: main.cpp
taskk_client/src/ui/: ui.cpp  ui.hpp  ui_creation_helpers.hpp
taskk_lib/: CMakeLists.txt
taskk_lib/src/: main.cpp
tester/: CMakeLists.txt
tester/libs/taskk/include/taskk/: taskk.hpp  taskk_api.h
tester/libs/taskk/include/taskk/cxx/macros/: make_scope_operation.hpp
tester/src/: main.c  main.cpp  switch.h
